package tilegame.ui;

public interface ClickLisener {

    public void onClick();
}
