@startuml

title __UI's Class Diagram__\n

  namespace tilegame {
    namespace ui {
      interface tilegame.ui.ClickLisener {
          {abstract} + onClick()
      }
    }
  }
  

  namespace tilegame {
    namespace ui {
      class tilegame.ui.UIBkg {
          - bkg : BufferedImage
          + UIBkg()
          + onClick()
          + render()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace ui {
      class tilegame.ui.UIImageButton {
          - locked : boolean
          - start : BufferedImage[]
          + UIImageButton()
          + getComanda()
          + isLocked()
          + onClick()
          + render()
          + setClick()
          + setLocked()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace ui {
      class tilegame.ui.UIManager {
          {static} - font : Font
          - objects : ArrayList<UIObject>
          + UIManager()
          + addObject()
          {static} + getFont()
          + getHandler()
          + getObjects()
          + onMouseMove()
          + onMouseRelease()
          + removeObject()
          + render()
          + setHandler()
          + setObjects()
          + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace ui {
      abstract class tilegame.ui.UIObject {
          # bounds : Rectangle
          # height : int
          # hovering : boolean
          # width : int
          # x : float
          # y : float
          + UIObject()
          + getHeight()
          + getWidth()
          + getX()
          + getY()
          + isHovering()
          {abstract} + onClick()
          + onMouseMove()
          + onMouseRelease()
          {abstract} + render()
          + setHeight()
          + setHovering()
          + setWidth()
          + setX()
          + setY()
          {abstract} + tick()
      }
    }
  }
  

  namespace tilegame {
    namespace ui {
      abstract class tilegame.ui.UIText {
          - size : int
          - text : String
          + UIText()
          + onClick()
          + render()
          + setText()
      }
    }
  }
  

  tilegame.ui.UIBkg -up-|> tilegame.ui.UIObject
  tilegame.ui.UIImageButton -up-|> tilegame.ui.UIObject
  tilegame.ui.UIImageButton o-- tilegame.ui.ClickLisener : click
  tilegame.ui.UIImageButton o-- tilegame.ui.ClickLisener : clickLisener
  tilegame.ui.UIImageButton o-- tilegame.command.Command : comanda
  tilegame.ui.UIManager o-- tilegame.Handler : handler
  tilegame.ui.UIText -up-|> tilegame.ui.UIObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
